[BlackBerry] Notify platform layer of failing to get authentication credentials https://bugs.webkit.org/show_bug.cgi?id=109751

Patch by Joe Mason <jmason@rim.com> on 2013-02-13
Reviewed by Yong Li.
Reviewed internally by Leo Yang
Internal PR: 181302

The BlackBerry platform network layer needs to know if a stream failed to get authentication credentials.
This patch is using newly added stream API to do it.

No functionality changed no new tests.

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::notifyAuthReceived):
(WebCore::NetworkJob::sendRequestWithCredentials):
(WebCore::NetworkJob::notifyChallengeResult):
* platform/network/blackberry/NetworkJob.h:
* platform/network/blackberry/NetworkManager.cpp:
(WebCore::protectionSpaceToPlatformAuth):
(WebCore):
(WebCore::setAuthCredentials):
* platform/network/blackberry/NetworkManager.h:
(WebCore):

Canonical link: https://commits.webkit.org/128141@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142926 268f45cc-cd09-0410-ab3c-d52691b4dbfc